// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image should lazy load the image when lazy==true 1`] = `
<Provider app={{...}}>
  <WithStyles(inject-Image) lazy={true} src="/foo.png" aspectRatio={50} lazyOffset={-10000}>
    <inject-Image lazy={true} src="/foo.png" aspectRatio={50} lazyOffset={-10000} classes={{...}}>
      <Image lazy={true} src="/foo.png" aspectRatio={50} lazyOffset={-10000} classes={{...}} amp={false} quality={{...}} contain={false} fill={false} primaryNotFound={false}>
        <VisibilitySensor active={true} onChange={[Function]} partialVisibility={true} offset={{...}} minTopValue={0} scrollCheck={false} scrollDelay={250} scrollThrottle={-1} resizeCheck={false} resizeDelay={250} resizeThrottle={-1} intervalCheck={true} intervalDelay={100} delayedCall={false} containment={{...}}>
          <div className="RSFImage-root-1 RSFImage-contain-3">
            <div style={{...}} />
          </div>
        </VisibilitySensor>
      </Image>
    </inject-Image>
  </WithStyles(inject-Image)>
</Provider>
`;

exports[`Image should render 1`] = `
<Provider app={{...}}>
  <WithStyles(inject-Image) src="/foo.png">
    <inject-Image src="/foo.png" classes={{...}}>
      <Image src="/foo.png" classes={{...}} amp={false} quality={{...}} contain={false} fill={false} lazy={false} lazyOffset={100} primaryNotFound={false}>
        <div className="RSFImage-root-1">
          <img src="/foo.png" className="" layout={{...}} height={[undefined]} width={[undefined]} alt={[undefined]} primaryNotFound={false} onError={[Function]} />
        </div>
      </Image>
    </inject-Image>
  </WithStyles(inject-Image)>
</Provider>
`;

exports[`Image should use amp-img when rendering with amp: true 1`] = `
<Provider app={{...}}>
  <WithStyles(inject-Image) src="/foo.png">
    <inject-Image src="/foo.png" classes={{...}}>
      <Image src="/foo.png" classes={{...}} amp={true} quality={{...}} contain={false} fill={false} lazy={false} lazyOffset={100} primaryNotFound={false}>
        <div className="RSFImage-root-1">
          <amp-img src="/foo.png" class="" layout="intrinsic" height={[undefined]} width={[undefined]} alt={[undefined]} />
        </div>
      </Image>
    </inject-Image>
  </WithStyles(inject-Image)>
</Provider>
`;

exports[`Image should use the image optimizer when quality is set 1`] = `
<Provider app={{...}}>
  <WithStyles(inject-Image) quality={50} src="/foo.png" aspectRatio={50}>
    <inject-Image quality={50} src="/foo.png" aspectRatio={50} classes={{...}}>
      <Image quality={50} src="/foo.png" aspectRatio={50} classes={{...}} amp={false} contain={false} fill={false} lazy={false} lazyOffset={100} primaryNotFound={false}>
        <div className="RSFImage-root-1 RSFImage-contain-3">
          <div style={{...}} />
          <img src="https://opt.moovweb.net/?quality=50&img=%2Ffoo.png" className="RSFImage-fit-2" layout={{...}} height={[undefined]} width={[undefined]} alt={[undefined]} primaryNotFound={false} onError={[Function]} />
        </div>
      </Image>
    </inject-Image>
  </WithStyles(inject-Image)>
</Provider>
`;
